@@ -1247,6 +1247,73 @@ operator|.
 name|prune
 argument_list|()
 decl_stmt|;
+comment|// If all partitions are unknown, throw an error.
+if|if
+condition|(
+operator|(
+name|opProcCtx
+operator|.
+name|getParseCtx
+argument_list|()
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEPARTITIONPRUNER
+argument_list|)
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+literal|"strict"
+argument_list|)
+operator|)
+operator|&&
+operator|(
+name|partsList
+operator|.
+name|getConfirmedPartns
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+operator|)
+operator|&&
+operator|(
+name|partsList
+operator|.
+name|getUnknownPartns
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|0
+operator|)
+condition|)
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|INCORRECT_PARTITION_PREDICATE
+operator|.
+name|getMsg
+argument_list|(
+literal|" for Alias "
+operator|+
+name|alias_id
+argument_list|)
+argument_list|)
+throw|;
 name|parts
 operator|=
 name|partsList
@@ -1264,6 +1331,16 @@ name|getUnknownPartns
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SemanticException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
 block|}
 catch|catch
 parameter_list|(
